test/src/e2e_vm_tests/test_programs/should_pass/language/generic_traits/src/my_triple.sw
library;

pub trait MyTriple<T> {
    fn my_triple(self, input: T) -> T;
}
