test/src/e2e_vm_tests/test_programs/should_fail/generic_traits/src/helpers.sw
library helpers;

pub trait OutOfScopeGetter<D> {
    fn out_of_scope_get(self) -> D;
}
